--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   google_fonts: ^6.3.1
 
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.5.3
+  sqflite: ^2.4.2
+  image_picker: ^1.2.0
+  video_player: ^2.10.0
 
 dev_dependencies:
   flutter_test:
